--- a/test/fixtures/blogs.yml
+++ b/test/fixtures/blogs.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  text: MyString
   title: MyString
-  content: MyText
 
 two:
+  text: MyString
   title: MyString
-  content: MyText
